--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
         <!-- 1 -->
         <div class="grid-item lookeate-item">
-            <h2>Lookeate!!</h2>
-            <h3>Sector damas</h3>
-            <h3>Barberia</h3>
-            <h3>Atencion personalizada!</h3>
+            <h2 class="animaciones">Lookeate!!</h2>
+            <h3 class="animaciones">Sector damas</3>
+            <h3 class="animaciones">Barberia</h3>
+            <h3 class="animaciones">Atencion personalizada!</h3>
         </div>
 
         <!-- 2 -->
