primer comit bootstrap

--- a/index.html
+++ b/index.html
@@ -6,31 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lookeate!</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
     <!---- comienzo HEADER ---->
     <header>
-
-        <!---- logo ---->
-        <div class="container-logo">
-            <h1 class="logo">Leo Di giorgio</h1>
-        </div>
-
-        <!---- menu ---->
-        <nav class="container-menu">
-            <ul class="container-lista">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="damas.html">Damas</a></li>
-                <li><a href="barberia.html">Barberia</a></li>
-                <li><a href="turnos.html">TURNOS</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="logo" href="index.html">Leonel Di giorgio</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" href="damas.html">Damas</a>
+                        <a class="nav-link" href="barberia.html">Barberia</a>
+                        <a class="nav-link" href="turnos.html">TURNOS</a>
+                        <a class="nav-link" href="nosotros.html">Nosotros</a>
+                    </div>
+                </div>
+            </div>
         </nav>
     </header>
     <!---- fin HEADER ---->
-
+  
 
     <!---- comienza MAIN ---->
     <main class="grid-container">
@@ -39,8 +44,8 @@
         <div class="grid-item lookeate-item">
             <h2 class="animaciones">Lookeate!!</h2>
             <h3 class="animaciones">Sector damas</3>
-            <h3 class="animaciones">Barberia</h3>
-            <h3 class="animaciones">Atencion personalizada!</h3>
+                <h3 class="animaciones">Barberia</h3>
+                <h3 class="animaciones">Atencion personalizada!</h3>
         </div>
 
         <!-- 2 -->
@@ -60,7 +65,7 @@
 
         <!-- 5 -->
         <div class="grid-item lookeate-item">
-            <h3>Lorem ipsum dolor sit  elit. Quo vel officia voluptates,
+            <h3>Lorem ipsum dolor sit elit. Quo vel officia voluptates,
                 velit earum, consequuntur, fugiat quia itaque molestiae ut
                 mollitia tenetur natus</h3>
         </div>
@@ -77,6 +82,35 @@
 
     </main>
     <!---- fin MAIN ---->
+
+
+    <!---- CAROUSEL ---->
+    <section class="container-carousel">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="imagenes/carusel1.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="imagenes/carusel2.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="imagenes/carusel3.jpg" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </section>
+    <!---- fin CAROUSEL ---->
 
 
 
@@ -97,7 +131,16 @@
         </div>
     </footer>
     <!---- fin FOOTER ---->
+    
 
+
+<!---- SCRIPT BOOTSTRAP ---->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
