--- a/barberia.html
+++ b/barberia.html
@@ -5,27 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lookeate!</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
      <!---- comienzo HEADER ---->
      <header>
-
-        <!---- logo ---->
-        <div class="container-logo">
-            <h1 class="logo">Leo Di giorgio</h1>
-        </div>
-
-        <!---- menu ---->
-        <nav class="container-menu">
-            <ul class="container-lista">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="damas.html">Damas</a></li>
-                <li><a href="barberia.html">Barberia</a></li>
-                <li><a href="turnos.html">TURNOS</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+            <div class="container-fluid">
+              <a class="logo" href="index.html">Leonel Di giorgio</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                  <a class="nav-link" href="damas.html">Damas</a>
+                  <a class="nav-link active" href="barberia.html">Barberia</a>
+                  <a class="nav-link" href="turnos.html">TURNOS</a>
+                  <a class="nav-link" href="nosotros.html">Nosotros</a>
+                </div>
+              </div>
+            </div>
+          </nav>
     </header>
     <!---- fin HEADER ---->
 
@@ -112,5 +115,13 @@
         </div>
     </footer>
     <!---- fin FOOTER ---->
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+    crossorigin="anonymous"></script>
 </body>
 </html>
