--- a/turnos.html
+++ b/turnos.html
@@ -36,41 +36,23 @@
 
 
 
-
     <!---- comienza MAIN ---->
-    <main>
-            <div class="contenedorItemTurnos">
+    <div class="container" style="margin:10px;">
+        <h3>Para una mejor atencion reserva con anticipacion tu turno</h3>
+      </div>
 
-                <div class="itemTurno">
-                    <p class="parrafo"> Para una mejor atencion reserva con anticipacion tu turno</p>
-                </div>
+      <div class="container" style="margin:10px;">
+         <h3>Horarios: martes a sabados de 9 a 19hs</h3>
+      </div>
 
-                <div class="itemTurno">
-                    <p class="parrafo"> Horarios: martes a sabados de 9 a 19hs</p>
-                </div>
+      <div class="container" style="margin:10px;">
+        <h3>Por consultas y reservas comunicate por whatsapp</h3>
+      </div>
 
-                <div class="itemTurno">
-                    <p class="parrafo">Por consultas y reservas comunicate por whatsapp
-                    </p>
-                </div>
-
-                <div class="itemTurno">
-                    <a href=""><img src="imagenes/whatsapp.png" class="whatsappTurnos"></a>
-                </div>
-            </div>
-    </main>
-    <!---- fin MAIN ---->
-
-
-
-
-
-
-
-
-
-
-
+      <div class="container" style="margin:10px;">
+        <a href=""><img src="imagenes/whatsapp.png" class="whatsappTurnos"></a>
+      </div>
+ <!---- fin MAIN ---->
 
 
 
