--- a/barberia.html
+++ b/barberia.html
@@ -1,127 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lookeate!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilo.css">
 </head>
+
 <body>
-     <!---- comienzo HEADER ---->
-     <header>
+    <!---- comienzo HEADER ---->
+    <header>
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container-fluid">
-              <a class="logo" href="index.html">Leonel Di giorgio</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link" aria-current="page" href="index.html">Home</a>
-                  <a class="nav-link" href="damas.html">Damas</a>
-                  <a class="nav-link active" href="barberia.html">Barberia</a>
-                  <a class="nav-link" href="turnos.html">TURNOS</a>
-                  <a class="nav-link" href="nosotros.html">Nosotros</a>
+                <a class="logo" href="index.html">Leonel Di giorgio</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" href="damas.html">Damas</a>
+                        <a class="nav-link active" href="barberia.html">Barberia</a>
+                        <a class="nav-link" href="turnos.html">TURNOS</a>
+                        <a class="nav-link" href="nosotros.html">Nosotros</a>
+                    </div>
                 </div>
-              </div>
             </div>
-          </nav>
+        </nav>
     </header>
     <!---- fin HEADER ---->
 
 
-    <!---- comienza MAIN ---->
-    <main class="container-dama">
-
-        <div class="item parrafo">
-                <h3>Lorem ipsum dolor sit amet consectetur    adipisicing elit. Vitae similique officiis    sapiente itaque
-                    dignissimos veniam eligendi quas? Temporibus incidunt error vitae ratione. Temporibus voluptatum
-                    amet id deleniti possimus eveniet laboriosam.
-                </h3>
-        </div>
-  <!---- imagen 1 ---->
-        <div class="item">
-            <img src="imagenes/barberia1.jpg" class="damas-imagen">
-        </div>
-
-        <div class="item parrafo">
-            <h3> Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni fugiat cum culpa, vitae aliquam error
-                unde
-                quis reprehenderit distinctio voluptatum tempore consequuntur nihil atque adipisci, ipsa a non deserunt
-                aliquid.</h3>
-        </div>
-<!---- imagen 2 ---->
-        <div class="item">
-            <img src="imagenes/barberia2.jpg" class="damas-imagen">
-        </div>
-
-        <div class="item parrafo">
-            <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo autem earum quisquam eligendi, aliquam,
-                aspernatur ducimus corporis adipisci esse sunt excepturi quo voluptates veniam debitis eos beatae nihil
-                praesentium libero.</h3>
-        </div>
-<!---- imagen 3 ---->
-        <div class="item">
-            <img src="imagenes/barberia3.jpg" class="damas-imagen">
-        </div>
-
-        <div class="item parrafo">
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eum deserunt consequatur nobis,
-                molestiae, amet asperiores id optio veniam hic exercitationem, aspernatur commodi sapiente perferendis
-                saepe reprehenderit cum tempore? Nobis?</h3>
-        </div>
-<!---- imagen 4 ---->
-        <div class="item">
-            <img src="imagenes/barberia4.jpg" class="damas-imagen">
-        </div>
-
-        <div class="item parrafo">
-            <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo autem earum quisquam eligendi, aliquam,
-                aspernatur ducimus corporis adipisci esse sunt excepturi quo voluptates veniam debitis eos beatae nihil
-                praesentium libero.</h3>
-        </div>
-<!---- imagen 5 ---->
-        <div class="item">
-            <img src="imagenes/barberia5.jpg" class="damas-imagen">
-        </div>
-
-        <div class="item parrafo">
-           <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eum deserunt consequatur nobis,
-            molestiae, amet asperiores id optio veniam hic exercitationem, aspernatur commodi sapiente perferendis
-            saepe reprehenderit cum tempore? Nobis?</h3>
-        </div>
-<!---- imagen 6 ---->
-        <div class="item">
-            <img src="imagenes/barberia6.jpg" class="damas-imagen">
-        </div>
-    </main>
     <!---- termina MAIN ---->
 
-     <!---- comienzo FOOTER ---->
-     <footer>
-        <div class="copyright">
-            <p class="copyright-item">COPYRIGHT - TODOS LOS DERECHOS RESERVADOS</p>
+    <div class="container">
+        <div class="row row-cols-2">
+            <div class="col" style="margin: auto;">
+                <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas nisi nobis non repudiandae placeat
+                    voluptate voluptas maiores, reprehenderit ipsa dolorum corrupti repellat rerum quos perferendis
+                    accusantium. Voluptates, ex. Consectetur, cum.
+                </h4>
+            </div>
+            <div class="col"><img src="imagenes/barberia1.jpg" class="damas-imagen"></div>
+            <div class="col" style="margin: auto;">
+                <h4> Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni fugiat cum culpa, vitae aliquam
+                    error
+                    unde
+                    quis reprehenderit distinctio voluptatum tempore consequuntur nihil atque adipisci, ipsa a non
+                    deserunt
+                    aliquid.</h4>
+            </div>
+            <div class="col"><img src="imagenes/barberia2.jpg" class="damas-imagen" </div>
+            </div>
         </div>
 
-        <div class="redsocial-container">
-            <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png"
-                    class="redsocial-item-insta"></a>
-            <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
-                    class="redsocial-item-face"></a>
-            <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item-whatsapp"></a>
+
+
+
+
+        <div class="container">
+            <div class="row row-cols-2">
+                <div class="col" style="margin: auto;">
+                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eum deserunt consequatur
+                        nobis,
+                        molestiae, amet asperiores id optio veniam hic exercitationem, aspernatur commodi sapiente
+                        perferendis
+                        saepe reprehenderit cum tempore? Nobis?</h4>
+                </div>
+                <div class="col"><img src="imagenes/barberia3.jpg" class="damas-imagen"></div>
+                <div class="col" style="margin: auto;">
+                    <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo autem earum quisquam eligendi,
+                        aliquam,
+                        aspernatur ducimus corporis adipisci esse sunt excepturi quo voluptates veniam debitis eos
+                        beatae
+                        nihil
+                        praesentium libero.</h4>
+                </div>
+                <div class="col"><img src="imagenes/barberia4.jpg" class="damas-imagen"></div>
+            </div>
         </div>
-    </footer>
-    <!---- fin FOOTER ---->
 
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-    crossorigin="anonymous"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!---- comienzo FOOTER ---->
+        <footer>
+            <div class="copyright">
+                <p class="copyright-item">COPYRIGHT - TODOS LOS DERECHOS RESERVADOS</p>
+            </div>
+
+            <div class="redsocial-container">
+                <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png"
+                        class="redsocial-item-insta"></a>
+                <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
+                        class="redsocial-item-face"></a>
+                <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item-whatsapp"></a>
+            </div>
+        </footer>
+        <!---- fin FOOTER ---->
+
+
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+            integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+            integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+            crossorigin="anonymous"></script>
 </body>
+
 </html>
