--- a/damas.html
+++ b/damas.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lookeate!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 
@@ -16,91 +16,82 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container-fluid">
-              <a class="logo" href="index.html">Leonel Di giorgio</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link" aria-current="page" href="index.html">Home</a>
-                  <a class="nav-link active" href="damas.html">Damas</a>
-                  <a class="nav-link" href="barberia.html">Barberia</a>
-                  <a class="nav-link" href="turnos.html">TURNOS</a>
-                  <a class="nav-link" href="nosotros.html">Nosotros</a>
+                <a class="logo" href="index.html">Leonel Di giorgio</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active" href="damas.html">Damas</a>
+                        <a class="nav-link" href="barberia.html">Barberia</a>
+                        <a class="nav-link" href="turnos.html">TURNOS</a>
+                        <a class="nav-link" href="nosotros.html">Nosotros</a>
+                    </div>
                 </div>
-              </div>
             </div>
-          </nav>
+        </nav>
     </header>
     <!---- fin HEADER ---->
 
 
-     <!---- comienza MAIN ---->
+    <!---- comienza MAIN ---->
 
-     <main class="container-dama">
-
-        <div class="item parrafo">
-                <h3>Lorem ipsum dolor sit amet consectetur    adipisicing elit. Vitae similique officiis    sapiente itaque
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-5 col-md-6" style="margin: auto;">
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae similique officiis sapiente itaque
                     dignissimos veniam eligendi quas? Temporibus incidunt error vitae ratione. Temporibus voluptatum
                     amet id deleniti possimus eveniet laboriosam.
-                </h3>
-        </div>
+                </h4>
+            </div>
+            <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
+                <img src="imagenes/dama1.jpg" class="damas-imagen">
+            </div>
 
-        <div class="item">
-            <img src="imagenes/dama1.jpg" class="damas-imagen">
         </div>
+        <div class="row">
+            <div class="col-sm-6 col-md-5 col-lg-6" style="margin: auto;">
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda illum, odit modi perspiciatis
+                    commodi labore, maxime qui corrupti eius reiciendis quam sunt amet quidem? Deleniti recusandae quas
+                    ex esse? Perferendis?</h4>
+            </div>
+            <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
 
-        <div class="item parrafo">
-            <h3> Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni fugiat cum culpa, vitae aliquam error
-                unde
-                quis reprehenderit distinctio voluptatum tempore consequuntur nihil atque adipisci, ipsa a non deserunt
-                aliquid.</h3>
+                <img src="imagenes/dama2.jpg" class="damas-imagen">
+            </div>
         </div>
+    </div>
 
-        <div class="item">
-            <img src="imagenes/dama2.jpg" class="damas-imagen">
-        </div>
 
-        <div class="item parrafo">
-            <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo autem earum quisquam eligendi, aliquam,
-                aspernatur ducimus corporis adipisci esse sunt excepturi quo voluptates veniam debitis eos beatae nihil
-                praesentium libero.</h3>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-5 col-md-6" style="margin: auto;">
+                <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates, dicta soluta praesentium fuga
+                    officiis vitae vero cum, consectetur culpa in quia quaerat, hic esse inventore quas facilis ipsa
+                    molestias. Et?
+                </h4>
+            </div>
+            <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
+                <img src="imagenes/dama3.jpg" class="damas-imagen">
+            </div>
         </div>
-
-        <div class="item">
-            <img src="imagenes/dama3.jpg" class="damas-imagen">
+        <div class="row">
+            <div class="col-sm-6 col-md-5 col-lg-6" style="margin: auto;">
+                <h4>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi debitis explicabo sunt beatae, quia
+                    repellendus sequi. Nobis natus minus dolores ipsam alias velit necessitatibus, laboriosam tenetur
+                    iure, doloremque animi similique.
+                </h4>
+            </div>
+            <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0" style="margin: auto;">
+               
+                <img src="imagenes/dama5.jpg" class="damas-imagen">
+            </div>
         </div>
-
-        <div class="item parrafo">
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eum deserunt consequatur nobis,
-                molestiae, amet asperiores id optio veniam hic exercitationem, aspernatur commodi sapiente perferendis
-                saepe reprehenderit cum tempore? Nobis?</h3>
-        </div>
-
-        <div class="item">
-            <img src="imagenes/dama4.jpg" class="damas-imagen">
-        </div>
-
-        <div class="item parrafo">
-            <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo autem earum quisquam eligendi, aliquam,
-                aspernatur ducimus corporis adipisci esse sunt excepturi quo voluptates veniam debitis eos beatae nihil
-                praesentium libero.</h3>
-        </div>
-
-        <div class="item">
-            <img src="imagenes/dama5.jpg" class="damas-imagen">
-        </div>
-
-        <div class="item parrafo">
-           <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eum deserunt consequatur nobis,
-            molestiae, amet asperiores id optio veniam hic exercitationem, aspernatur commodi sapiente perferendis
-            saepe reprehenderit cum tempore? Nobis?</h3>
-        </div>
-
-        <div class="item">
-            <img src="imagenes/dama6.jpg" class="damas-imagen">
-        </div>
-    </main>
+    </div>
     <!---- termina MAIN ---->
 
 
@@ -122,11 +113,11 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-    crossorigin="anonymous"></script>
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 
 </body>
 
