--- a/index.html
+++ b/index.html
@@ -35,112 +35,107 @@
         </nav>
     </header>
     <!---- fin HEADER ---->
-  
-
-    <!---- comienza MAIN ---->
-    <main class="grid-container">
-
-        <!-- 1 -->
-        <div class="grid-item lookeate-item">
-            <h2 class="animaciones">Lookeate!!</h2>
-            <h3 class="animaciones">Sector damas</3>
-                <h3 class="animaciones">Barberia</h3>
-                <h3 class="animaciones">Atencion personalizada!</h3>
-        </div>
-
-        <!-- 2 -->
-        <div class="grid-item imagen1">
-            <img src="imagenes/chicoBarberia.jpg" class="gallery-imagen">
-        </div>
-
-        <!-- 3 -->
-        <div class="grid-item imagen2">
-            <img src="imagenes/chicaSonrisa.jpg" class="gallery-imagen">
-        </div>
-
-        <!-- 4 -->
-        <div class="grid-item imagen3">
-            <img src="imagenes/chicaPeloCara.jpg" class="gallery-imagen">
-        </div>
-
-        <!-- 5 -->
-        <div class="grid-item lookeate-item">
-            <h3>Lorem ipsum dolor sit elit. Quo vel officia voluptates,
-                velit earum, consequuntur, fugiat quia itaque molestiae ut
-                mollitia tenetur natus</h3>
-        </div>
-
-        <!-- 6 -->
-        <div class="grid-item imagen4">
-            <img src="imagenes/hombreBarba.jpg" class="gallery-imagen">
-        </div>
-
-        <!-- 7 -->
-        <div class="grid-item lookeate-item">
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-        </div>
-
-    </main>
-    <!---- fin MAIN ---->
 
 
-    <!---- CAROUSEL ---->
-    <section class="container-carousel">
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="imagenes/carusel1.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="imagenes/carusel2.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="imagenes/carusel3.jpg" class="d-block w-100" alt="...">
+    <!-- comienza MAIN ------->
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <img src="imagenes/hombreBarba.jpg" class="gallery-imagen" style="width: 40rem;">
+            </div>
+
+            <div class="col" style="margin: auto;">
+           
+                        <h2 class="animaciones">Lookeate!!</h2>
+                        <h3 class="animaciones">-Sector damas</3>
+                        <h3 class="animaciones">-Barberia</h3>
+                        <h3 class="animaciones">-Atencion <br> personalizada</h3> 
+                    </div>
+
+                <div class="col">
+                    <img src="imagenes/chicaPeloCara.jpg" class="gallery-imagen" style="width: 40rem;">
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+    </div>
+
+
+
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <img src="imagenes/chicaSonrisa.jpg" class="gallery-imagen">
+                </div>
+                <div class="col">
+                    <img src="imagenes/chicoBarberia.jpg" class="gallery-imagen">
+                </div>
+                <div class="col" style="margin: auto;">
+                    <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totat voluo voluptatem nulla illo,
+                        repellendus veritatis. Tenetur
+                        possimus iure ullam qui.</h4>
+                </div>
+            </div>
         </div>
-    </section>
-    <!---- fin CAROUSEL ---->
+        <!--- fin MAIN -- -->
+
+
+
+        <!---- CAROUSEL ---->
+        <section class="container-carousel">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="imagenes/carusel1.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/carusel2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/carusel3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <!---- fin CAROUSEL ---->
 
 
 
 
 
-    <!---- comienzo FOOTER ---->
-    <footer>
-        <div class="copyright">
-            <p class="copyright-item">COPYRIGHT - TODOS LOS DERECHOS RESERVADOS</p>
-        </div>
+        <!---- comienzo FOOTER ---->
+        <footer>
+            <div class="copyright">
+                <p class="copyright-item">COPYRIGHT - TODOS LOS DERECHOS RESERVADOS</p>
+            </div>
 
-        <div class="redsocial-container">
-            <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png"
-                    class="redsocial-item-insta"></a>
-            <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
-                    class="redsocial-item-face"></a>
-            <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item-whatsapp"></a>
-        </div>
-    </footer>
-    <!---- fin FOOTER ---->
-    
+            <div class="redsocial-container">
+                <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png"
+                        class="redsocial-item-insta"></a>
+                <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
+                        class="redsocial-item-face"></a>
+                <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item-whatsapp"></a>
+            </div>
+        </footer>
+        <!---- fin FOOTER ---->
 
 
-<!---- SCRIPT BOOTSTRAP ---->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
+
+        <!---- SCRIPT BOOTSTRAP ---->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+            integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+            integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
