--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Lookeate!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -38,104 +38,86 @@
 
 
     <!-- comienza MAIN ------->
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <img src="imagenes/hombreBarba.jpg" class="gallery-imagen" style="width: 40rem;">
-            </div>
 
-            <div class="col" style="margin: auto;">
-           
-                        <h2 class="animaciones">Lookeate!!</h2>
-                        <h3 class="animaciones">-Sector damas</3>
-                        <h3 class="animaciones">-Barberia</h3>
-                        <h3 class="animaciones">-Atencion <br> personalizada</h3> 
-                    </div>
-
-                <div class="col">
-                    <img src="imagenes/chicaPeloCara.jpg" class="gallery-imagen" style="width: 40rem;">
-                </div>
-            </div>
+    <div class="container-animaciones">
+        <h2 class="animaciones">Lookeate!!</h2>
+        <h3 class="animaciones">-Sector damas</3>
+            <h3 class="animaciones">-Barberia</h3>
+            <h3 class="animaciones">-Atencion personalizada</h3>
     </div>
 
+    <!---- CAROUSEL ---->
+    <section class="container-carousel">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="imagenes/carusel1.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="imagenes/carusel2.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="imagenes/carusel3.jpg" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </section>
+    <!---- fin CAROUSEL ---->
 
 
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <img src="imagenes/chicaSonrisa.jpg" class="gallery-imagen">
-                </div>
-                <div class="col">
-                    <img src="imagenes/chicoBarberia.jpg" class="gallery-imagen">
-                </div>
-                <div class="col" style="margin: auto;">
-                    <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totat voluo voluptatem nulla illo,
-                        repellendus veritatis. Tenetur
-                        possimus iure ullam qui.</h4>
-                </div>
+
+ <!---- row abajo ---->
+    <div class="container" style="margin: 10px;">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
+            <div class="col"><h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, culpa.</h4></div>
+            <div class="col"><img src="imagenes/chicoBarberia.jpg" class="gallery-imagen"></div>
+            <div class="col"><h4>Lorem ipsum, odio ab nostrum iste nesciunt eaque nihil dignempore. Vperspiciatis culpa voluptas earum.</h4></div>
+            <div class="col"> <img src="imagenes/chicaSonrisa.jpg" class="gallery-imagen">
             </div>
         </div>
-        <!--- fin MAIN -- -->
+    </div>
+ <!---- fin row abajo ---->
 
-
-
-        <!---- CAROUSEL ---->
-        <section class="container-carousel">
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="imagenes/carusel1.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="imagenes/carusel2.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="imagenes/carusel3.jpg" class="d-block w-100" alt="...">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-        </section>
-        <!---- fin CAROUSEL ---->
+    <!--- fin MAIN -- -->
 
 
 
 
+    <!---- comienzo FOOTER ---->
+    <footer>
+        <div class="copyright">
+            <h4>Copyright - todos los derechos reservados</h4>
+        </div>
 
-        <!---- comienzo FOOTER ---->
-        <footer>
-            <div class="copyright">
-                <p class="copyright-item">COPYRIGHT - TODOS LOS DERECHOS RESERVADOS</p>
-            </div>
-
-            <div class="redsocial-container">
-                <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png"
-                        class="redsocial-item-insta"></a>
-                <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
-                        class="redsocial-item-face"></a>
-                <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item-whatsapp"></a>
-            </div>
-        </footer>
-        <!---- fin FOOTER ---->
-
+        <div class="redsocial-container">
+            <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png"
+                    class="redsocial-item-insta"></a>
+            <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
+                    class="redsocial-item-face"></a>
+            <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item-whatsapp"></a>
+        </div>
+    </footer>
+    <!---- fin FOOTER ---->
 
 
-        <!---- SCRIPT BOOTSTRAP ---->
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-            integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-            integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-            crossorigin="anonymous"></script>
+
+    <!---- SCRIPT BOOTSTRAP ---->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
