--- a/index.html
+++ b/index.html
@@ -38,12 +38,19 @@
 
     <!-- comienza MAIN ------->
 
-    <div class="container-animaciones">
-        <h1 class="animaciones">Lookeate!!</h1>
-        <h3 class="animaciones">Sector damas</3>
-            <h3 class="animaciones">Barberia</h3>
-            <h3 class="animaciones">Atencion personalizada</h3>
-    </div>
+    <section>
+        <div class="animaciones"> 
+
+            <div class="animaciones-item"> <h1>Lookeate!!</h1></div>
+
+            <div class="animaciones-item"> <h3>Sector damas</3></div>
+
+            <div class="animaciones-item"> <h3>Barberia</h3></div>
+
+            <div class="animaciones-item"> <h3>Atencion personalizada</h3></div>
+
+        </div>
+    </section>
 
     <!---- CAROUSEL ---->
     <section class="container-carousel">
@@ -76,7 +83,7 @@
 
 
     <!---- galeria imagenes ---->
-    <div class="container">
+    <section class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
             <div class="col">
                 <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, culpa.</h4>
@@ -88,12 +95,22 @@
                 <h4>Lorem ipsum, odio ab nostrum iste nesciunt eaque nihil dignempore. Vperspiciatis culpa voluptas
                     earum.</h4>
             </div>
-            <div class="col"> 
+            <div class="col">
                 <img src="imagenes/chicaSonrisa.jpg" class="gallery-imagen">
             </div>
         </div>
-    </div>
-    <!---- fin  ---->
+    </section>
+    <!---- fin galeria imagenes ---->
+
+    <!---- marcas ---->
+    <section class="marcas">
+        <div class="marcas-item"><img src="imagenes/sirFausto.jfif" alt="" class="marca-imagen"></div>
+
+        <div class="marcas-item"><img src="imagenes/whal.png" alt="" class="marca-imagen"></div>
+
+        <div class="marcas-item"><img src="imagenes/loreal.png" alt="" class="marca-imagen"></div>
+    </section>
+    <!---- fin marcas ---->
 
     <!--- fin MAIN -- -->
 
@@ -102,17 +119,19 @@
 
     <!---- comienzo FOOTER ---->
     <footer>
-        <div class="copyright">
-            <h4 class="copyright-item">Copyright - todos los derechos reservados</h4>
-        </div>
+        <section class="footer">
+            <div class="copyright">
+                <h4 class="copyright-item">Copyright - todos los derechos reservados</h4>
+            </div>
 
-        <div class="redsocial-container">
-            <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png"
-                    class="redsocial-item"></a>
-            <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
-                    class="redsocial-item"></a>
-            <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item"></a>
-        </div>
+            <div class="redsocial-container">
+                <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png"
+                        class="redsocial-item"></a>
+                <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
+                        class="redsocial-item"></a>
+                <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item"></a>
+            </div>
+        </section>
     </footer>
     <!---- fin FOOTER ---->
 
