--- a/barberia.html
+++ b/barberia.html
@@ -8,7 +8,7 @@
     <title>Lookeate!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/backup..css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -37,17 +37,20 @@
     <!---- fin HEADER ---->
 
 
-    <!---- termina MAIN ---->
+    <!----  MAIN ---->
 
+    <!---- galeria imagenes ---->
     <div class="container">
         <div class="row row-cols-2">
+
             <div class="col" style="margin: auto;">
                 <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas nisi nobis non repudiandae placeat
                     voluptate voluptas maiores, reprehenderit ipsa dolorum corrupti repellat rerum quos perferendis
-                    accusantium. Voluptates, ex. Consectetur, cum.
-                </h4>
+                    accusantium. Voluptates, ex. Consectetur, cum.</h4>
             </div>
-            <div class="col"><img src="imagenes/barberia1.jpg" class="damas-imagen"></div>
+
+            <div class="col"><img src="imagenes/barberia4.jpg" class="damas-imagen"></div>
+
             <div class="col" style="margin: auto;">
                 <h4> Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni fugiat cum culpa, vitae aliquam
                     error
@@ -56,16 +59,14 @@
                     deserunt
                     aliquid.</h4>
             </div>
-            <div class="col"><img src="imagenes/barberia2.jpg" class="damas-imagen" </div>
-            </div>
+
+            <div class="col"><img src="imagenes/barberia3.jpg" class="damas-imagen"></div>
         </div>
-
-
-
-
+    </div>
 
         <div class="container">
             <div class="row row-cols-2">
+
                 <div class="col" style="margin: auto;">
                     <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eum deserunt consequatur
                         nobis,
@@ -73,7 +74,9 @@
                         perferendis
                         saepe reprehenderit cum tempore? Nobis?</h4>
                 </div>
-                <div class="col"><img src="imagenes/barberia3.jpg" class="damas-imagen"></div>
+
+                <div class="col"><img src="imagenes/barberia2.jpg" class="damas-imagen"></div>
+
                 <div class="col" style="margin: auto;">
                     <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo autem earum quisquam eligendi,
                         aliquam,
@@ -82,25 +85,30 @@
                         nihil
                         praesentium libero.</h4>
                 </div>
-                <div class="col"><img src="imagenes/barberia4.jpg" class="damas-imagen"></div>
+
+                <div class="col"><img src="imagenes/barberia1.jpg" class="damas-imagen"></div>
+
             </div>
         </div>
+        <!---- fin galeria imagenes ---->
 
+        <!---- termina MAIN ---->
 
-
-        <!---- comienzo FOOTER ---->
+        <!---- empieza FOOTER ---->
         <footer>
-            <div class="copyright">
-                <h4>Copyright - todos los derechos reservados</h4>
-            </div>
+            <section class="footer">
+                <div class="copyright">
+                    <h4 class="copyright-item">Copyright - todos los derechos reservados</h4>
+                </div>
 
-            <div class="redsocial-container">
-                <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png"
-                        class="redsocial-item-insta"></a>
-                <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
-                        class="redsocial-item-face"></a>
-                <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item-whatsapp"></a>
-            </div>
+                <div class="redsocial-container">
+                    <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png"
+                            class="redsocial-item"></a>
+                    <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
+                            class="redsocial-item"></a>
+                    <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item"></a>
+                </div>
+            </section>
         </footer>
         <!---- fin FOOTER ---->
 
