--- a/damas.html
+++ b/damas.html
@@ -8,7 +8,7 @@
     <title>Lookeate!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/backup..css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -87,7 +87,7 @@
                 </h4>
             </div>
             <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0" style="margin: auto;">
-               
+
                 <img src="imagenes/dama5.jpg" class="damas-imagen">
             </div>
         </div>
@@ -97,18 +97,21 @@
 
     <!---- empieza FOOTER ---->
     <footer>
-        <div class="copyright">
-            <h4>Copyright - todos los derechos reservados</h4>
-        </div>
+        <section class="footer">
+            <div class="copyright">
+                <h4 class="copyright-item">Copyright - todos los derechos reservados</h4>
+            </div>
 
-        <div class="redsocial-container">
-            <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png"
-                    class="redsocial-item-insta"></a>
-            <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
-                    class="redsocial-item-face"></a>
-            <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item-whatsapp"></a>
-        </div>
+            <div class="redsocial-container">
+                <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png"
+                        class="redsocial-item"></a>
+                <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
+                        class="redsocial-item"></a>
+                <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item"></a>
+            </div>
+        </section>
     </footer>
+    <!---- fin FOOTER ---->
 
 
 
