--- a/nosotros.html
+++ b/nosotros.html
@@ -8,7 +8,7 @@
   <title>Lookeate!</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/backup..css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -38,33 +38,40 @@
 
   <!---- comienzo MAIN ---->
   <main>
-    <div class="container">
-      <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt voluptatem amet, unde culpa maxime in
-        atque. Corporis, iusto dolor at repellat totam rerum labore perspiciatis earum iure ea, rem quaerat.</h4> 
-    </div>
 
-    <div class="container">
-      <img src="imagenes/nosotros.jpg">
-    </div>
+    <section>
+      <div class="contenedorNosotros">
+
+        <div class="contenedorNosotros-item">
+                    <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt voluptatem amet, unde culpa maxime in
+                        atque. Corporis, iusto dolor at repellat totam rerum labore perspiciatis earum iure ea, rem quaerat.</h4>
+       </div>
+
+        <div class="contenedorNosotros-item"><img src="imagenes/nosotros.jpg" class="imagenNosotros"></div>
+      </div>
+      
+
+    </section>
 
   </main>
   <!---- fin comienzo MAIN ---->
 
 
 
-  <!---- comienzo FOOTER ---->
+  <!---- empieza FOOTER ---->
   <footer>
-    <div class="copyright">
-      <h4>Copyright - todos los derechos reservados</h4>
-    </div>
+    <section class="footer">
+      <div class="copyright">
+        <h4 class="copyright-item">Copyright - todos los derechos reservados</h4>
+      </div>
 
-    <div class="redsocial-container">
-      <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png"
-          class="redsocial-item-insta"></a>
-      <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
-          class="redsocial-item-face"></a>
-      <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item-whatsapp"></a>
-    </div>
+      <div class="redsocial-container">
+        <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png" class="redsocial-item"></a>
+        <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
+            class="redsocial-item"></a>
+        <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item"></a>
+      </div>
+    </section>
   </footer>
   <!---- fin FOOTER ---->
 
