--- a/turnos.html
+++ b/turnos.html
@@ -2,81 +2,83 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lookeate!</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lookeate!</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/backup..css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <!---- comienzo HEADER ---->
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-            <div class="container-fluid">
-              <a class="logo" href="index.html">Leonel Di giorgio</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link" aria-current="page" href="index.html">Home</a>
-                  <a class="nav-link" href="damas.html">Damas</a>
-                  <a class="nav-link" href="barberia.html">Barberia</a>
-                  <a class="nav-link active" href="turnos.html">TURNOS</a>
-                  <a class="nav-link" href="nosotros.html">Nosotros</a>
-                </div>
-              </div>
-            </div>
-          </nav>
-    </header>
-    <!---- fin HEADER ---->
-
-
-
-    <!---- comienza MAIN ---->
-    <div class="container" style="margin:10px;">
-        <h3>Para una mejor atencion reserva con anticipacion tu turno</h3>
-      </div>
-
-      <div class="container" style="margin:10px;">
-         <h3>Horarios: martes a sabados de 9 a 19hs</h3>
-      </div>
-
-      <div class="container" style="margin:10px;">
-        <h3>Por consultas y reservas comunicate por whatsapp</h3>
-      </div>
-
-      <div class="container" style="margin:10px;">
-        <a href=""><img src="imagenes/whatsapp.png" class="whatsappTurnos"></a>
-      </div>
- <!---- fin MAIN ---->
-
-
-
-    <!---- comienzo FOOTER ---->
-    <footer>
-        <div class="copyright">
-          <h4>Copyright - todos los derechos reservados</h4>
+  <!---- comienzo HEADER ---->
+  <header>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="logo" href="index.html">Leonel Di giorgio</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link" href="damas.html">Damas</a>
+            <a class="nav-link" href="barberia.html">Barberia</a>
+            <a class="nav-link active" href="turnos.html">TURNOS</a>
+            <a class="nav-link" href="nosotros.html">Nosotros</a>
+          </div>
         </div>
-
-        <div class="redsocial-container">
-            <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png"
-                    class="redsocial-item-insta"></a>
-            <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
-                    class="redsocial-item-face"></a>
-            <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item-whatsapp"></a>
-        </div>
-    </footer>
-    <!---- fin FOOTER ---->
+      </div>
+    </nav>
+  </header>
+  <!---- fin HEADER ---->
 
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+
+  <!---- comienza MAIN ---->
+  <div class="container" style="margin:10px;">
+    <h3>Para una mejor atencion reserva con anticipacion tu turno</h3>
+  </div>
+
+  <div class="container" style="margin:10px;">
+    <h3>Horarios: martes a sabados de 9 a 19hs</h3>
+  </div>
+
+  <div class="container" style="margin:10px;">
+    <h3>Por consultas y reservas comunicate por whatsapp</h3>
+  </div>
+
+  <div class="container" style="margin:10px;">
+    <a href=""><img src="imagenes/whatsapp.png" class="whatsappTurnos"></a>
+  </div>
+  <!---- fin MAIN ---->
+
+
+
+  <!---- empieza FOOTER ---->
+  <footer>
+    <section class="footer">
+      <div class="copyright">
+        <h4 class="copyright-item">Copyright - todos los derechos reservados</h4>
+      </div>
+
+      <div class="redsocial-container">
+        <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png" class="redsocial-item"></a>
+        <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
+            class="redsocial-item"></a>
+        <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item"></a>
+      </div>
+    </section>
+  </footer>
+  <!---- fin FOOTER ---->
+
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
     crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"></script>
 
