termine trabajo sass y seo

--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lookeate!</title>
+    <meta name="keywords" content="estilismo, peluqueria, barberia, corte cabello, tintura, degrade, fade, 
+  navaja, afeitado, peinados, 15 años, bodas, graduaciones, tijeras, peines, recogidos">
+    <meta name="description"
+    content="Somos un salón de peluquería y estética unisex que ha llegado a convertirse en
+     un referente en el sector en la ciudad de Rosario.">
+    <title>Leo Di giorgio | peluqueria damas y caballeros</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="imagenes/logo.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -71,7 +77,7 @@
     <section>
         <div class="animaciones"> 
 
-            <h1 class="animaciones-letras">Lookeate!!</h1>
+            <h1 class="animaciones-letras">Salon de estetica, Peluqueria y Barberia</h1>
 
             <h3 class="animaciones-letras">Sector damas</3>
 
@@ -93,14 +99,14 @@
                 <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, culpa.</h4>
             </div>
             <div class="col">
-                <img src="imagenes/chicoBarberia.jpg" class="gallery-imagen">
+                <img src="imagenes/chicoBarberia.jpg" alt="corte caballero a maquina" class="gallery-imagen">
             </div>
             <div class="col">
                 <h4>Lorem ipsum, odio ab nostrum iste nesciunt eaque nihil dignempore. Vperspiciatis culpa voluptas
                     earum.</h4>
             </div>
             <div class="col">
-                <img src="imagenes/chicaSonrisa.jpg" class="gallery-imagen">
+                <img src="imagenes/chicaSonrisa.jpg" alt="mujer mostrando su corte de cabello" class="gallery-imagen">
             </div>
         </div>
     </section>
@@ -109,11 +115,11 @@
     <!---- marcas ---->
     <section class="marcas">
         
-        <div class="marcas-item"><img src="imagenes/sirFausto.jfif" alt="" class="marca-imagen"></div>
+        <div class="marcas-item"><img src="imagenes/sirFausto.jfif" alt="marca sir fausto" class="marca-imagen"></div>
 
-        <div class="marcas-item"><img src="imagenes/whal.png" alt="" class="marca-imagen"></div>
+        <div class="marcas-item"><img src="imagenes/whal.png" alt="marca whal, herramientas de peluqueria" class="marca-imagen"></div>
 
-        <div class="marcas-item"><img src="imagenes/loreal.png" alt="" class="marca-imagen"></div>
+        <div class="marcas-item"><img src="imagenes/loreal.png" alt="marca loreal, productos de estetica" class="marca-imagen"></div>
     </section>
     <!---- fin marcas ---->
 
