--- a/barberia.html
+++ b/barberia.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lookeate!</title>
+    <title>Leo Di giorgio | peluqueria damas y caballeros</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="imagenes/logo.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -39,9 +40,13 @@
 
     <!----  MAIN ---->
 
+<section>
+    <h1 class="titulo-damasCaballero">Corte, estilo y tendencias</h1>
+</section>
+
     <!---- galeria imagenes ---->
-    <div class="container">
-        <div class="row row-cols-2">
+    <section class="container">
+        <div class="row row-cols-2"> 
 
             <div class="col" style="margin: auto;">
                 <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas nisi nobis non repudiandae placeat
@@ -49,7 +54,7 @@
                     accusantium. Voluptates, ex. Consectetur, cum.</h4>
             </div>
 
-            <div class="col"><img src="imagenes/barberia4.jpg" class="damas-imagen"></div>
+            <div class="col"><img src="imagenes/barberia4.jpg" alt="modelo masculino posando con su corte de cabello" class="damas-imagen"></div>
 
             <div class="col" style="margin: auto;">
                 <h4> Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni fugiat cum culpa, vitae aliquam
@@ -60,65 +65,71 @@
                     aliquid.</h4>
             </div>
 
-            <div class="col"><img src="imagenes/barberia3.jpg" class="damas-imagen"></div>
+            <div class="col"><img src="imagenes/barberia3.jpg" alt="modelo masculino posando con su corte de cabello" class="damas-imagen"></div>
         </div>
-    </div>
+    </section>
+    <section class="container">
+        <div class="row row-cols-2">
 
-        <div class="container">
-            <div class="row row-cols-2">
-
-                <div class="col" style="margin: auto;">
-                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eum deserunt consequatur
-                        nobis,
-                        molestiae, amet asperiores id optio veniam hic exercitationem, aspernatur commodi sapiente
-                        perferendis
-                        saepe reprehenderit cum tempore? Nobis?</h4>
-                </div>
-
-                <div class="col"><img src="imagenes/barberia2.jpg" class="damas-imagen"></div>
-
-                <div class="col" style="margin: auto;">
-                    <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo autem earum quisquam eligendi,
-                        aliquam,
-                        aspernatur ducimus corporis adipisci esse sunt excepturi quo voluptates veniam debitis eos
-                        beatae
-                        nihil
-                        praesentium libero.</h4>
-                </div>
-
-                <div class="col"><img src="imagenes/barberia1.jpg" class="damas-imagen"></div>
-
+            <div class="col" style="margin: auto;">
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eum deserunt consequatur
+                    nobis,
+                    molestiae, amet asperiores id optio veniam hic exercitationem, aspernatur commodi sapiente
+                    perferendis
+                    saepe reprehenderit cum tempore? Nobis?</h4>
             </div>
+
+            <div class="col"><img src="imagenes/barberia2.jpg" alt="modelo masculino mostrando trabajo de colorimetria" class="damas-imagen"></div>
+
+            <div class="col" style="margin: auto;">
+                <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo autem earum quisquam eligendi,
+                    aliquam,
+                    aspernatur ducimus corporis adipisci esse sunt excepturi quo voluptates veniam debitis eos
+                    beatae
+                    nihil
+                    praesentium libero.</h4>
+            </div>
+
+            <div class="col"><img src="imagenes/barberia1.jpg" alt="modelo masculino mostrando su corte" class="damas-imagen"></div>
+
         </div>
-        <!---- fin galeria imagenes ---->
-
-        <!---- termina MAIN ---->
-
-        <!---- empieza FOOTER ---->
-        <footer>
-            <section class="footer">
-                <div class="copyright">
-                    <h4 class="copyright-item">Copyright - todos los derechos reservados</h4>
-                </div>
-
-                <div class="redsocial-container">
-                    <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png"
-                            class="redsocial-item"></a>
-                    <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
-                            class="redsocial-item"></a>
-                    <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item"></a>
-                </div>
-            </section>
-        </footer>
-        <!---- fin FOOTER ---->
+    </section>
 
 
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-            integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-            integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-            crossorigin="anonymous"></script>
+    <div class="co"></div>
+
+    <div class="cont"></div>
+
+    <!---- fin galeria imagenes ---->
+ <!---- termina MAIN ---->
+
+
+
+    <!---- empieza FOOTER ---->
+    <footer>
+        <section class="footer">
+            <div class="copyright">
+                <h4 class="copyright-item">Copyright - todos los derechos reservados</h4>
+            </div>
+
+            <div class="redsocial-container">
+                <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png"
+                        class="redsocial-item"></a>
+                <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
+                        class="redsocial-item"></a>
+                <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item"></a>
+            </div>
+        </section>
+    </footer>
+    <!---- fin FOOTER ---->
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
