--- a/damas.html
+++ b/damas.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lookeate!</title>
+    <title>Leo Di giorgio | peluqueria damas y caballeros</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="imagenes/logo.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -38,17 +39,20 @@
 
 
     <!---- comienza MAIN ---->
+    <section class="titulo-damasCaballero">
+        <h1> Belleza, Cosmetica, Cuidado personal</h1>
+    </section>
 
-    <div class="container">
+    <section class="container">
         <div class="row">
             <div class="col-sm-5 col-md-6" style="margin: auto;">
                 <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae similique officiis sapiente itaque
                     dignissimos veniam eligendi quas? Temporibus incidunt error vitae ratione. Temporibus voluptatum
                     amet id deleniti possimus eveniet laboriosam.
                 </h4>
-            </div>
+            </div> 
             <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
-                <img src="imagenes/dama1.jpg" class="damas-imagen">
+                <img src="imagenes/dama1.jpg" alt="clienta feliz con su cabello" class="damas-imagen">
             </div>
 
         </div>
@@ -60,13 +64,12 @@
             </div>
             <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
 
-                <img src="imagenes/dama2.jpg" class="damas-imagen">
+                <img src="imagenes/dama2.jpg" alt="foto mostrando como realizamos trabajos de color" class="damas-imagen">
             </div>
         </div>
-    </div>
+    </section>
 
-
-    <div class="container">
+    <section class="container">
         <div class="row">
             <div class="col-sm-5 col-md-6" style="margin: auto;">
                 <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates, dicta soluta praesentium fuga
@@ -75,7 +78,7 @@
                 </h4>
             </div>
             <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
-                <img src="imagenes/dama3.jpg" class="damas-imagen">
+                <img src="imagenes/dama3.jpg" alt=" foto peinando cabello largo" class="damas-imagen">
             </div>
         </div>
         <div class="row">
@@ -88,10 +91,15 @@
             </div>
             <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0" style="margin: auto;">
 
-                <img src="imagenes/dama5.jpg" class="damas-imagen">
+                <img src="imagenes/dama5.jpg" alt="modelo femenina mostrando su peinado" class="damas-imagen">
             </div>
         </div>
-    </div>
+    </section>
+
+
+    <div class="conta"></div>
+
+    <div class="cont"></div>
     <!---- termina MAIN ---->
 
 
