--- a/nosotros.html
+++ b/nosotros.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lookeate!</title>
+  <title>Leo Di giorgio | peluqueria damas y caballeros</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="shortcut icon" href="imagenes/logo.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -40,16 +41,17 @@
   <main>
 
     <section>
+      <h1 style="text-align: center;"> 20 años de experiencia creando estilos </h1>
       <div class="contenedorNosotros">
-
         <div class="contenedorNosotros-item">
-                    <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt voluptatem amet, unde culpa maxime in
-                        atque. Corporis, iusto dolor at repellat totam rerum labore perspiciatis earum iure ea, rem quaerat.</h4>
-       </div>
+          <h4>Todo nuestros staff de estilistas profecionales estan capacitados/as para frecerte los estilos más vanguardistas y actuales fusionándolos con un ambiente relajante, respetuoso y
+            de confianza cambiando así los estereotipos de la peluquería tradicional, cuidando al máximo los detalles.
+          </h4>
+        </div>
 
-        <div class="contenedorNosotros-item"><img src="imagenes/nosotros.jpg" class="imagenNosotros"></div>
+        <div class="contenedorNosotros-item"><img src="imagenes/nosotros.jpg" alt="integrante de nuestro staff de trabajo" class="imagenNosotros"></div>
       </div>
-      
+
 
     </section>
 
