--- a/turnos.html
+++ b/turnos.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lookeate!</title>
+  <title>Leo Di giorgio | peluqueria damas y caballeros</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="shortcut icon" href="imagenes/logo.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -38,21 +39,23 @@
 
 
   <!---- comienza MAIN ---->
-  <div class="container" style="margin:10px;">
-    <h3>Para una mejor atencion reserva con anticipacion tu turno</h3>
-  </div>
+  <section>
 
-  <div class="container" style="margin:10px;">
-    <h3>Horarios: martes a sabados de 9 a 19hs</h3>
-  </div>
+    <h1>Para una mejor atencion reserva con anticipacion tu turno</h1>
 
-  <div class="container" style="margin:10px;">
-    <h3>Por consultas y reservas comunicate por whatsapp</h3>
-  </div>
+    <div class="container" style="margin:10px;">
+      <h3>Horarios: martes a sabados de 9 a 19hs</h3>
+    </div>
 
-  <div class="container" style="margin:10px;">
-    <a href=""><img src="imagenes/whatsapp.png" class="whatsappTurnos"></a>
-  </div>
+    <div class="container" style="margin:10px;">
+      <h3>Por consultas y reservas comunicate por whatsapp</h3>
+    </div>
+
+    <div class="container" style="margin:10px;">
+      <a href=""><img src="imagenes/whatsapp.png" class="whatsappTurnos"></a>
+    </div>
+  </section>
+
   <!---- fin MAIN ---->
 
 
