--- a/barberia.html
+++ b/barberia.html
@@ -40,72 +40,70 @@
 
     <!----  MAIN ---->
 
-<section>
-    <h1 class="titulo-damasCaballero">Corte, estilo y tendencias</h1>
-</section>
+    <section>
+        <h1 class="titulo-damasCaballero">Corte, estilo y tendencias</h1>
+    </section>
 
     <!---- galeria imagenes ---->
     <section class="container">
-        <div class="row row-cols-2"> 
+        <div class="row">
+            <div class="col-sm-5 col-md-6">
+                <img src="imagenes/barberia1.jpg" alt="clienta feliz con su cabello" class="damas-imagen">
+            </div>
+            <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0" style="margin: auto;">
 
-            <div class="col" style="margin: auto;">
-                <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas nisi nobis non repudiandae placeat
-                    voluptate voluptas maiores, reprehenderit ipsa dolorum corrupti repellat rerum quos perferendis
-                    accusantium. Voluptates, ex. Consectetur, cum.</h4>
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae similique officiis sapiente itaque
+                    dignissimos veniam eligendi quas? Temporibus incidunt error vitae ratione. Temporibus voluptatum
+                    amet id deleniti possimus eveniet laboriosam.
+                </h4>
             </div>
 
-            <div class="col"><img src="imagenes/barberia4.jpg" alt="modelo masculino posando con su corte de cabello" class="damas-imagen"></div>
-
-            <div class="col" style="margin: auto;">
-                <h4> Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni fugiat cum culpa, vitae aliquam
-                    error
-                    unde
-                    quis reprehenderit distinctio voluptatum tempore consequuntur nihil atque adipisci, ipsa a non
-                    deserunt
-                    aliquid.</h4>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 col-md-5 col-lg-6">
+                <img src="imagenes/barberia2.jpg" alt="foto mostrando como realizamos trabajos de color"
+                    class="damas-imagen">
             </div>
-
-            <div class="col"><img src="imagenes/barberia3.jpg" alt="modelo masculino posando con su corte de cabello" class="damas-imagen"></div>
+            <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0" style="margin: auto;">
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda illum, odit modi perspiciatis
+                    commodi labore, maxime qui corrupti eius reiciendis quam sunt amet quidem? Deleniti recusandae quas
+                    ex esse? Perferendis?</h4>
+            </div>
         </div>
     </section>
+
     <section class="container">
-        <div class="row row-cols-2">
-
-            <div class="col" style="margin: auto;">
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eum deserunt consequatur
-                    nobis,
-                    molestiae, amet asperiores id optio veniam hic exercitationem, aspernatur commodi sapiente
-                    perferendis
-                    saepe reprehenderit cum tempore? Nobis?</h4>
+        <div class="row">
+            <div class="col-sm-5 col-md-6">
+                <img src="imagenes/barberia3.jpg" alt=" foto peinando cabello largo" class="damas-imagen">
             </div>
-
-            <div class="col"><img src="imagenes/barberia2.jpg" alt="modelo masculino mostrando trabajo de colorimetria" class="damas-imagen"></div>
-
-            <div class="col" style="margin: auto;">
-                <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo autem earum quisquam eligendi,
-                    aliquam,
-                    aspernatur ducimus corporis adipisci esse sunt excepturi quo voluptates veniam debitis eos
-                    beatae
-                    nihil
-                    praesentium libero.</h4>
+            <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0" style="margin: auto;">
+                <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates, dicta soluta praesentium fuga
+                    officiis vitae vero cum, consectetur culpa in quia quaerat, hic esse inventore quas facilis ipsa
+                    molestias. Et?
+                </h4>
             </div>
-
-            <div class="col"><img src="imagenes/barberia1.jpg" alt="modelo masculino mostrando su corte" class="damas-imagen"></div>
-
+        </div>
+        <div class="row">
+            <div class="col-sm-6 col-md-5 col-lg-6">
+                <img src="imagenes/barberia4.jpg" alt="modelo femenina mostrando su peinado" class="damas-imagen">
+            </div>
+            <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0" style="margin: auto;">
+                <h4>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi debitis explicabo sunt beatae, quia
+                    repellendus sequi. Nobis natus minus dolores ipsam alias velit necessitatibus, laboriosam tenetur
+                    iure, doloremque animi similique.
+                </h4>
+            </div>
         </div>
     </section>
-
-
-    <div class="co"></div>
-
-    <div class="cont"></div>
 
     <!---- fin galeria imagenes ---->
- <!---- termina MAIN ---->
+    <!---- termina MAIN ---->
 
 
 
-    <!---- empieza FOOTER ---->
+    <!---- comienzo FOOTER ---->
     <footer>
         <section class="footer">
             <div class="copyright">
@@ -114,10 +112,11 @@
 
             <div class="redsocial-container">
                 <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png"
-                        class="redsocial-item"></a>
+                        alt="logo instagram" class="redsocial-item-instagram"></a>
                 <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
-                        class="redsocial-item"></a>
-                <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item"></a>
+                        alt="logo facebook" class="redsocial-item-facebook"></a>
+                <a href="whatsapp"><img src="imagenes/whatsapp.png" alt="logo whatsapp"
+                        class="redsocial-item-whatsapp"></a>
             </div>
         </section>
     </footer>
