--- a/damas.html
+++ b/damas.html
@@ -39,71 +39,71 @@
 
 
     <!---- comienza MAIN ---->
+    <!---- TITULO ---->
     <section class="titulo-damasCaballero">
         <h1> Belleza, Cosmetica, Cuidado personal</h1>
     </section>
+    <!---- fin TITULO ---->
 
+    <!---- GALERIA ---->
     <section class="container">
         <div class="row">
-            <div class="col-sm-5 col-md-6" style="margin: auto;">
+            <div class="col-sm-5 col-md-6">
+                <img src="imagenes/dama1.jpg" alt="clienta feliz con su cabello" class="damas-imagen">
+            </div>
+            <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0" style="margin: auto;">
+
                 <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae similique officiis sapiente itaque
                     dignissimos veniam eligendi quas? Temporibus incidunt error vitae ratione. Temporibus voluptatum
                     amet id deleniti possimus eveniet laboriosam.
                 </h4>
-            </div> 
-            <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
-                <img src="imagenes/dama1.jpg" alt="clienta feliz con su cabello" class="damas-imagen">
             </div>
 
         </div>
         <div class="row">
-            <div class="col-sm-6 col-md-5 col-lg-6" style="margin: auto;">
+            <div class="col-sm-6 col-md-5 col-lg-6">
+                <img src="imagenes/dama2.jpg" alt="foto mostrando como realizamos trabajos de color"
+                    class="damas-imagen">
+            </div>
+            <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0" style="margin: auto;">
                 <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda illum, odit modi perspiciatis
                     commodi labore, maxime qui corrupti eius reiciendis quam sunt amet quidem? Deleniti recusandae quas
                     ex esse? Perferendis?</h4>
-            </div>
-            <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
-
-                <img src="imagenes/dama2.jpg" alt="foto mostrando como realizamos trabajos de color" class="damas-imagen">
             </div>
         </div>
     </section>
 
     <section class="container">
         <div class="row">
-            <div class="col-sm-5 col-md-6" style="margin: auto;">
+            <div class="col-sm-5 col-md-6">
+                <img src="imagenes/dama3.jpg" alt=" foto peinando cabello largo" class="damas-imagen">
+            </div>
+            <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0" style="margin: auto;">
                 <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates, dicta soluta praesentium fuga
                     officiis vitae vero cum, consectetur culpa in quia quaerat, hic esse inventore quas facilis ipsa
                     molestias. Et?
                 </h4>
             </div>
-            <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
-                <img src="imagenes/dama3.jpg" alt=" foto peinando cabello largo" class="damas-imagen">
-            </div>
         </div>
         <div class="row">
-            <div class="col-sm-6 col-md-5 col-lg-6" style="margin: auto;">
+            <div class="col-sm-6 col-md-5 col-lg-6">
+                <img src="imagenes/dama4.jpg" alt="modelo femenina mostrando su peinado" class="damas-imagen">
+            </div>
+            <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0" style="margin: auto;">
                 <h4>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi debitis explicabo sunt beatae, quia
                     repellendus sequi. Nobis natus minus dolores ipsam alias velit necessitatibus, laboriosam tenetur
                     iure, doloremque animi similique.
                 </h4>
             </div>
-            <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0" style="margin: auto;">
-
-                <img src="imagenes/dama5.jpg" alt="modelo femenina mostrando su peinado" class="damas-imagen">
-            </div>
         </div>
     </section>
-
-
-    <div class="conta"></div>
-
-    <div class="cont"></div>
+    <!---- fin GALERIA ---->
     <!---- termina MAIN ---->
 
 
-    <!---- empieza FOOTER ---->
+
+    <!---- comienzo FOOTER ---->
     <footer>
         <section class="footer">
             <div class="copyright">
@@ -112,10 +112,11 @@
 
             <div class="redsocial-container">
                 <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png"
-                        class="redsocial-item"></a>
+                        alt="logo instagram" class="redsocial-item-instagram"></a>
                 <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
-                        class="redsocial-item"></a>
-                <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item"></a>
+                        alt="logo facebook" class="redsocial-item-facebook"></a>
+                <a href="whatsapp"><img src="imagenes/whatsapp.png" alt="logo whatsapp"
+                        class="redsocial-item-whatsapp"></a>
             </div>
         </section>
     </footer>
