--- a/index.html
+++ b/index.html
@@ -45,32 +45,48 @@
 
 <!---- CAROUSEL ---->
 <section class="container-carousel">
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="imagenes/carusel3.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="imagenes/carusel2.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="imagenes/carusel1.jpg" class="d-block w-100" alt="...">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="imagenes/carusel1.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h2 style="color: white">Exclusivo en la ciudad de Rosario</h2>
+          <h4 style="color: white">Servicios en estética, peluquería y barberia.</h4>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="imagenes/carusel2.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h2 style="color: black ;">Exclusivo en la ciudad de Rosario</h2>
+          <h4 style="color: black;">Puntualidad en la atención.</h4>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="imagenes/carusel3.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h2 style="color: white">Exclusivo en la ciudad de Rosario</h2>
+          <h4 style="color: white">Contamos con productos de primeras marcas.</h4>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
 </section>
 <!---- fin CAROUSEL ---->
-
 
 
 <!---- ANIMACIONES ---->
@@ -79,7 +95,7 @@
 
             <h1 class="animaciones-letras">Salon de estetica, Peluqueria y Barberia</h1>
 
-            <h3 class="animaciones-letras">Sector damas</3>
+            <h3 class="animaciones-letras">Sector damas</h3>
 
             <h3 class="animaciones-letras">Barberia</h3>
 
@@ -99,14 +115,14 @@
                 <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, culpa.</h4>
             </div>
             <div class="col">
-                <img src="imagenes/chicoBarberia.jpg" alt="corte caballero a maquina" class="gallery-imagen">
+                <img src="imagenes/index1.jpg" alt="herramientas para cortar el cabello" class="gallery-imagen">
             </div>
             <div class="col">
                 <h4>Lorem ipsum, odio ab nostrum iste nesciunt eaque nihil dignempore. Vperspiciatis culpa voluptas
                     earum.</h4>
             </div>
             <div class="col">
-                <img src="imagenes/chicaSonrisa.jpg" alt="mujer mostrando su corte de cabello" class="gallery-imagen">
+                <img src="imagenes/index2.jpg" alt="sepillos para peinar el cabello" class="gallery-imagen">
             </div>
         </div>
     </section>
@@ -114,8 +130,9 @@
 
     <!---- marcas ---->
     <section class="marcas">
+        <div class="marcas-item"><img src="imagenes/wella.jpg" alt="marca wella, productos de tintura" class="marca-imagen"> </div>
         
-        <div class="marcas-item"><img src="imagenes/sirFausto.jfif" alt="marca sir fausto" class="marca-imagen"></div>
+        <div class="marcas-item"><img src="imagenes/sirFausto.jpg" alt="marca sir fausto, productos para peinar" class="marca-imagen"></div>
 
         <div class="marcas-item"><img src="imagenes/whal.png" alt="marca whal, herramientas de peluqueria" class="marca-imagen"></div>
 
@@ -136,11 +153,11 @@
             </div>
 
             <div class="redsocial-container">
-                <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png"
-                        class="redsocial-item"></a>
-                <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
-                        class="redsocial-item"></a>
-                <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item"></a>
+                <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png" alt="logo instagram"
+                        class="redsocial-item-instagram"></a>
+                <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png" alt="logo facebook"
+                        class="redsocial-item-facebook"></a>
+                <a href="whatsapp"><img src="imagenes/whatsapp.png" alt="logo whatsapp" class="redsocial-item-whatsapp"></a>
             </div>
         </section>
     </footer>
