--- a/nosotros.html
+++ b/nosotros.html
@@ -60,23 +60,23 @@
 
 
 
-  <!---- empieza FOOTER ---->
-  <footer>
-    <section class="footer">
+ <!---- comienzo FOOTER ---->
+ <footer>
+  <section class="footer">
       <div class="copyright">
-        <h4 class="copyright-item">Copyright - todos los derechos reservados</h4>
+          <h4 class="copyright-item">Copyright - todos los derechos reservados</h4>
       </div>
 
       <div class="redsocial-container">
-        <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png" class="redsocial-item"></a>
-        <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
-            class="redsocial-item"></a>
-        <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item"></a>
+          <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png" alt="logo instagram"
+                  class="redsocial-item-instagram"></a>
+          <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png" alt="logo facebook"
+                  class="redsocial-item-facebook"></a>
+          <a href="whatsapp"><img src="imagenes/whatsapp.png" alt="logo whatsapp" class="redsocial-item-whatsapp"></a>
       </div>
-    </section>
-  </footer>
-  <!---- fin FOOTER ---->
-
+  </section>
+</footer>
+<!---- fin FOOTER ---->
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
