agrege foto en nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -42,15 +42,32 @@
 
     <section>
       <h1 style="text-align: center;"> 20 años de experiencia creando estilos </h1>
+
       <div class="contenedorNosotros">
         <div class="contenedorNosotros-item">
-          <h4>Todo nuestros staff de estilistas profecionales estan capacitados/as para frecerte los estilos más vanguardistas y actuales fusionándolos con un ambiente relajante, respetuoso y
+          <img src="imagenes/nosotros.jpg" alt="integrante de staff de trabajo" class="imagenNosotros">
+        </div>
+
+        <div class="contenedorNosotros-item">
+          <h4>Todo nuestros staff de estilistas profecionales estan capacitados/as para frecerte los estilos más
+            vanguardistas y actuales fusionándolos con un ambiente relajante, respetuoso y
             de confianza cambiando así los estereotipos de la peluquería tradicional, cuidando al máximo los detalles.
           </h4>
         </div>
-
-        <div class="contenedorNosotros-item"><img src="imagenes/nosotros.jpg" alt="integrante de nuestro staff de trabajo" class="imagenNosotros"></div>
       </div>
+
+      <div class="contenedorNosotros">
+        <div class="contenedorNosotros-item">
+          <img src="imagenes/nosotros2.jpg" alt="integrante de staff de trabajo" class="imagenNosotros">
+        </div>
+
+        <div class="contenedorNosotros-item">
+          <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore ut animi quaerat fuga rerum cupiditate
+            facilis veritatis aperiam quae aut perferendis alias, illo praesentium doloremque ullam eligendi. Labore,
+            iste quos!</h4>
+        </div>
+      </div>
+
 
 
     </section>
@@ -60,23 +77,23 @@
 
 
 
- <!---- comienzo FOOTER ---->
- <footer>
-  <section class="footer">
+  <!---- comienzo FOOTER ---->
+  <footer>
+    <section class="footer">
       <div class="copyright">
-          <h4 class="copyright-item">Copyright - todos los derechos reservados</h4>
+        <h4 class="copyright-item">Copyright - todos los derechos reservados</h4>
       </div>
 
       <div class="redsocial-container">
-          <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png" alt="logo instagram"
-                  class="redsocial-item-instagram"></a>
-          <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png" alt="logo facebook"
-                  class="redsocial-item-facebook"></a>
-          <a href="whatsapp"><img src="imagenes/whatsapp.png" alt="logo whatsapp" class="redsocial-item-whatsapp"></a>
+        <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png" alt="logo instagram"
+            class="redsocial-item-instagram"></a>
+        <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png" alt="logo facebook"
+            class="redsocial-item-facebook"></a>
+        <a href="whatsapp"><img src="imagenes/whatsapp.png" alt="logo whatsapp" class="redsocial-item-whatsapp"></a>
       </div>
-  </section>
-</footer>
-<!---- fin FOOTER ---->
+    </section>
+  </footer>
+  <!---- fin FOOTER ---->
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
