--- a/damas.html
+++ b/damas.html
@@ -5,11 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="estilismo, peluqueria, barberia, corte cabello, tintura, degrade, fade, 
+  navaja, afeitado, peinados, 15 años, bodas, graduaciones, tijeras, peines, recogidos">
+    <meta name="description" content="Somos un salón de peluquería y estética unisex que ha llegado a convertirse en
+     un referente en el sector en la ciudad de Rosario.">
     <title>Leo Di giorgio | peluqueria damas y caballeros</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="imagenes/logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="imagenes/tijerasico.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -17,7 +21,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="logo" href="index.html">Leo Di giorgio</a>
+                <a class="logo" href="index.html"><img src="imagenes/tijeras.png" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -38,7 +42,8 @@
     <!---- fin HEADER ---->
 
 
-    <!---- comienza MAIN ---->
+    <!--------------------- comienza MAIN ---->
+
     <!---- TITULO ---->
     <section class="titulo-damasCaballero">
         <h1> Belleza, Cosmetica, Cuidado personal</h1>
@@ -49,7 +54,7 @@
     <section class="container">
         <div class="row">
             <div class="col-sm-5 col-md-6">
-                <img src="imagenes/dama1.jpg" alt="clienta feliz con su cabello" class="damas-imagen">
+                <img src="imagenes/dama1.jpg" alt="clienta maquillandose" class="damas-imagen">
             </div>
             <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0" style="margin: auto;">
 
@@ -62,7 +67,7 @@
         </div>
         <div class="row">
             <div class="col-sm-6 col-md-5 col-lg-6">
-                <img src="imagenes/dama2.jpg" alt="foto mostrando como realizamos trabajos de color"
+                <img src="imagenes/dama2.jpg" alt="foto mostrando peinado con bucles"
                     class="damas-imagen">
             </div>
             <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0" style="margin: auto;">
@@ -76,7 +81,7 @@
     <section class="container">
         <div class="row">
             <div class="col-sm-5 col-md-6">
-                <img src="imagenes/dama3.jpg" alt=" foto peinando cabello largo" class="damas-imagen">
+                <img src="imagenes/dama3.jpg" alt="foto cortando cabello largo" class="damas-imagen">
             </div>
             <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0" style="margin: auto;">
                 <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates, dicta soluta praesentium fuga
@@ -87,7 +92,7 @@
         </div>
         <div class="row">
             <div class="col-sm-6 col-md-5 col-lg-6">
-                <img src="imagenes/dama4.jpg" alt="modelo femenina mostrando su peinado" class="damas-imagen">
+                <img src="imagenes/dama4.jpg" alt="modelo femenina mostrando su maquillaje" class="damas-imagen">
             </div>
             <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0" style="margin: auto;">
                 <h4>
@@ -99,8 +104,8 @@
         </div>
     </section>
     <!---- fin GALERIA ---->
-    <!---- termina MAIN ---->
 
+    <!--------------------------- termina MAIN ---->
 
 
     <!---- comienzo FOOTER ---->
@@ -123,7 +128,6 @@
     <!---- fin FOOTER ---->
 
 
-
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
@@ -132,5 +136,4 @@
         crossorigin="anonymous"></script>
 
 </body>
-
 </html>
