--- a/index.html
+++ b/index.html
@@ -9,18 +9,24 @@
   navaja, afeitado, peinados, 15 años, bodas, graduaciones, tijeras, peines, recogidos">
     <meta name="description" content="Somos un salón de peluquería y estética unisex que ha llegado a convertirse en
      un referente en el sector en la ciudad de Rosario.">
+     <meta property:"og:type" content="web site"> 
+     <meta property:"og:title" content="Leo Di giorgio | peluqueria damas y caballeros">
+     <meta property:"og:url" content="...">
+     <meta property:"og:image" content="...">
+     
     <title>Leo Di giorgio | peluqueria damas y caballeros</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="imagenes/logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="imagenes/tijerasico.ico" type="image/x-icon">
 </head>
 
 <body>
+    <!---- comienzo HEADER   *^das^d*d^d¨dÑd_d:d;D!dªd"ddd*][{dsadsadasddqqx`q`aaáaa---->
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="logo" href="index.html">Leo Di giorgio</a>
+                <a class="logo" href="index.html"><img src="imagenes/tijeras.png" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -38,13 +44,13 @@
             </div>
         </nav>
     </header>
+    <!---- fin HEADER ---->
 
 
-    <!-- comienza MAIN ------->
+    <!-------------------------------------- MAIN ------->
 
     <!---- CAROUSEL ---->
     <section class="container-carousel">
-
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -56,21 +62,21 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="imagenes/carusel1.jpg" class="d-block w-100" alt="...">
+                    <img src="imagenes/carusel1.jpg" class="d-block w-100" alt="integrante del staff">
                     <div class="carousel-caption d-none d-md-block">
                         <h2 style="color: white">Exclusivo en la ciudad de Rosario</h2>
                         <h4 style="color: white">Servicios en estética, peluquería y barberia.</h4>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/carusel2.jpg" class="d-block w-100" alt="...">
+                    <img src="imagenes/carusel2.jpg" class="d-block w-100" alt="mechon de cabello forando un corazon">
                     <div class="carousel-caption d-none d-md-block">
                         <h2 style="color: black ;">Exclusivo en la ciudad de Rosario</h2>
                         <h4 style="color: black;">Puntualidad en la atención.</h4>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/carusel3.jpg" class="d-block w-100" alt="...">
+                    <img src="imagenes/carusel3.jpg" class="d-block w-100" alt="productos para peinar junto a flores">
                     <div class="carousel-caption d-none d-md-block">
                         <h2 style="color: white">Exclusivo en la ciudad de Rosario</h2>
                         <h4 style="color: white">Contamos con productos de primeras marcas.</h4>
@@ -88,31 +94,21 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-
     </section>
     <!---- fin CAROUSEL ---->
-
 
     <!---- ANIMACIONES ---->
     <section>
         <div class="animaciones">
-
             <h1 class="animaciones-letras">Salon de estetica, Peluqueria y Barberia</h1>
-
             <h3 class="animaciones-letras">Sector damas</h3>
-
             <h3 class="animaciones-letras">Barberia</h3>
-
             <h3 class="animaciones-letras">Atencion personalizada</h3>
-
         </div>
     </section>
     <!---- fin ANIMACIONES ---->
 
-
-
-
-    <!---- galeria imagenes ---->
+    <!---- galeria IMAGENES ---->
     <section class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
             <div class="col">
@@ -140,22 +136,21 @@
 
     <section class="marcas">
         <div class="marcas-item"><img src="imagenes/wella.jpg" alt="marca wella, productos de tintura"
-                class="marca-imagen"> </div>
-
+                class="marca-imagen">
+        </div>
         <div class="marcas-item"><img src="imagenes/sirFausto.jpg" alt="marca sir fausto, productos para peinar"
-                class="marca-imagen"></div>
-
+                class="marca-imagen">
+        </div>
         <div class="marcas-item"><img src="imagenes/whal.png" alt="marca whal, herramientas de peluqueria"
-                class="marca-imagen"></div>
-
+                class="marca-imagen">
+        </div>
         <div class="marcas-item"><img src="imagenes/loreal.png" alt="marca loreal, productos de estetica"
-                class="marca-imagen"></div>
+                class="marca-imagen">
+        </div>
     </section>
     <!---- fin MARCAS ---->
 
-    <!--- fin MAIN -- -->
-
-
+    <!------------------------------- fin MAIN ---->
 
 
     <!---- comienzo FOOTER ---->
@@ -164,7 +159,6 @@
             <div class="copyright">
                 <h4 class="copyright-item">Copyright - todos los derechos reservados</h4>
             </div>
-
             <div class="redsocial-container">
                 <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png"
                         alt="logo instagram" class="redsocial-item-instagram"></a>
@@ -178,7 +172,6 @@
     <!---- fin FOOTER ---->
 
 
-
     <!---- SCRIPT BOOTSTRAP ---->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
@@ -186,6 +179,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
-</body>
 
+</body>
 </html>
