--- a/nosotros.html
+++ b/nosotros.html
@@ -5,11 +5,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="estilismo, peluqueria, barberia, corte cabello, tintura, degrade, fade, 
+  navaja, afeitado, peinados, 15 años, bodas, graduaciones, tijeras, peines, recogidos">
+  <meta name="description" content="Somos un salón de peluquería y estética unisex que ha llegado a convertirse en
+     un referente en el sector en la ciudad de Rosario.">
   <title>Leo Di giorgio | peluqueria damas y caballeros</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="shortcut icon" href="imagenes/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="imagenes/tijerasico.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -17,7 +21,7 @@
   <header>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="logo" href="index.html">Leo Di giorgio</a>
+        <a class="logo" href="index.html"><img src="imagenes/tijeras.png" alt="logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -37,9 +41,8 @@
   <!---- fin HEADER ---->
 
 
-  <!---- comienzo MAIN ---->
+  <!----------------------- comienzo MAIN ---->
   <main>
-
     <section>
       <h1 style="text-align: center;"> 20 años de experiencia creando estilos </h1>
 
@@ -67,14 +70,9 @@
             iste quos!</h4>
         </div>
       </div>
-
-
-
     </section>
-
   </main>
-  <!---- fin comienzo MAIN ---->
-
+  <!-------------------------------- fin comienzo MAIN ---->
 
 
   <!---- comienzo FOOTER ---->
@@ -95,6 +93,7 @@
   </footer>
   <!---- fin FOOTER ---->
 
+
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
     crossorigin="anonymous"></script>
@@ -103,5 +102,4 @@
     crossorigin="anonymous"></script>
 
 </body>
-
 </html>
