--- a/turnos.html
+++ b/turnos.html
@@ -5,11 +5,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="estilismo, peluqueria, barberia, corte cabello, tintura, degrade, fade, 
+  navaja, afeitado, peinados, 15 años, bodas, graduaciones, tijeras, peines, recogidos">
+  <meta name="description" content="Somos un salón de peluquería y estética unisex que ha llegado a convertirse en
+     un referente en el sector en la ciudad de Rosario.">
   <title>Leo Di giorgio | peluqueria damas y caballeros</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="shortcut icon" href="imagenes/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="imagenes/tijerasico.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -17,7 +21,7 @@
   <header>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="logo" href="index.html">Leo Di giorgio</a>
+        <a class="logo" href="index.html"><img src="imagenes/tijeras.png" alt="logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -37,120 +41,105 @@
   <!---- fin HEADER ---->
 
 
+  <!-------------------------- comienza MAIN ---->
 
-  <!---- comienza MAIN ---->
-
-
-
+  <!---- ENCABEZADO ---->
   <section class="horarios">
-
-    <h1 class="titulo-damasCaballero">Para una mejor atencion reserva con anticipacion tu turno</h1>
+    <h1 class="titulo-damasCaballero">Para una mejor atencion reserva con anticipacion tu lugar</h1>
 
     <div class="container" style="margin:10px;">
       <h3>Horarios: Martes a Sabados de 9 a 19hs</h3>
     </div>
 
     <div class="container" style="margin:10px;">
-      <h3>Por consultas y reservas solicita tu turno y al instante te vamos a confirmar tu lugar</h3>
+      <h3>Por consultas y reservas deja tus datos y al instante nos comunicamos contigo para confirmar tu turno:</h3>
     </div>
   </section>
-
-
-
+  <!---- fin ENCABEZADO ---->
 
   <!---- FORMULARIO ---->
   <section>
     <form action="turnos.php" method="post">
-      
+      <label>
+        <p>Nombre y Apellido:</p>
+        <input class="datos-cliete" type="text" name="nombre y apellid" placeholder="Nombre y Apellido">
+      </label>
 
-        <label>
-          <p>Nombre y Apellido:</p>
-          <input class="datos-cliete" type="text" name="nombre y apellid" placeholder="Nombre y Apellido">
+      <label>
+        <p>Direccion:</p>
+        <input class="datos-cliete" type="text" name="direccion" placeholder="Direccion">
+      </label>
+
+      <label>
+        <p>Edad:</p>
+        <input class="datos-cliete" type="number" name="edad" min="15" max="80">
+      </label>
+
+      <label>
+        <p>Numero celular:</p>
+        <input class="datos-cliete" type="number" name="tel" placeholder="153469367">
+      </label>
+
+      <div class="caja-checkbox">
+        <p> Servicio que quieres contratar:</p>
+
+        <label>1- Corte caballero
+          <input type="checkbox" name="servivio" value="corte">
         </label>
 
-        <label>
-          <p>Direccion:</p>
-          <input class="datos-cliete" type="text" name="direccion" placeholder="Direccion">
+        <label>2- Barba
+          <input type="checkbox" name="servivio" value="barba">
         </label>
 
-        <label>
-          <p>Edad:</p>
-          <input class="datos-cliete" type="number" name="edad" min="15" max="80">
+        <label>3- Corte y Barba
+          <input type="checkbox" name="servivio" value="corte y barba">
         </label>
 
-        <label>
-          <p>Numero celular:</p>
-          <input class="datos-cliete" type="number" name="tel" placeholder="153469367">
+        <label>4- Corte dama
+          <input type="checkbox" name="servivio" value="corte dama">
         </label>
 
-        <div class="caja-checkbox">
-          <p> Servicio que quieres contratar:</p>
+        <label>5- Reflejos
+          <input type="checkbox" name="servivio" value="reflejos">
+        </label>
 
-          <label>1- Corte caballero
-            <input type="checkbox" name="servivio" value="corte">
-          </label>
+        <label>6- Alisado
+          <input type="checkbox" name="servivio" value="alisado">
+        </label>
 
-          <label>2- Barba
-            <input type="checkbox" name="servivio" value="barba">
-          </label>
+        <label>7- Hidratacion
+          <input type="checkbox" name="servivio" value="hidratacion">
+        </label>
 
-          <label>3- Corte y Barba
-            <input type="checkbox" name="servivio" value="corte y barba">
-          </label>
+        <label>8- Uñas
+          <input type="checkbox" name="servivio" value="uñas">
+        </label>
 
-          <label>4- Corte dama
-            <input type="checkbox" name="servivio" value="corte dama">
-          </label>
+        <label>9- Masajes
+          <input type="checkbox" name="servivio" value="masajes">
+        </label>
 
-          <label>5- Reflejos
-            <input type="checkbox" name="servivio" value="reflejos">
-          </label>
+        <label>10-Depilacion
+          <input type="checkbox" name="servivio" value="depilacion">
+        </label>
 
-          <label>6- Alisado
-            <input type="checkbox" name="servivio" value="alisado">
-          </label>
-
-          <label>7- Hidratacion
-            <input type="checkbox" name="servivio" value="hidratacion">
-          </label>
-
-          <label>8- Uñas
-            <input type="checkbox" name="servivio" value="uñas">
-          </label>
-
-          <label>9- Masajes
-            <input type="checkbox" name="servivio" value="masajes">
-          </label>
-
-          <label>10-Depilacion
-            <input type="checkbox" name="servivio" value="depilacion">
-          </label>
-
-          <label>11- Otro
-            <input type="checkbox" name="servivio" value="otro">
-          </label>
-        </div>
+        <label>11- Otro
+          <input type="checkbox" name="servivio" value="otro">
+        </label>
+      </div>
 
       <label>
         <p>¿Que dia y horario prefieres el turno?:</p>
         <input class="comentario" type="text" placeholder="Agregar dias y horarios posibles">
       </label>
 
-
       <input type="button" value="Solicitar turno" class="button">
-      
     </form>
   </section>
   <!---- fin FORMULARIO ---->
 
+  <!----------------------------------- fin MAIN ---->
 
-
-
-
-
-
-
-  <!---- fin MAIN ---->
 
   <!---- comienzo FOOTER ---->
   <footer>
@@ -170,6 +159,7 @@
   </footer>
   <!---- fin FOOTER ---->
 
+
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
     crossorigin="anonymous"></script>
@@ -178,5 +168,4 @@
     crossorigin="anonymous"></script>
 
 </body>
-
 </html>
