--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      un referente en el sector en la ciudad de Rosario.">
      <meta property:"og:type" content="web site"> 
      <meta property:"og:title" content="Leo Di giorgio | peluqueria damas y caballeros">
-     <meta property:"og:url" content="...">
+     <meta property:"og:url" content="https://leodigiorgio.000webhostapp.com/">
      <meta property:"og:image" content="...">
      
     <title>Leo Di giorgio | peluqueria damas y caballeros</title>
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <!---- comienzo HEADER   *^das^d*d^d¨dÑd_d:d;D!dªd"ddd*][{dsadsadasddqqx`q`aaáaa---->
+    <!---- comienzo HEADER  ---->
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container-fluid">
