--- a/turnos.html
+++ b/turnos.html
@@ -58,8 +58,8 @@
   <!---- fin ENCABEZADO ---->
 
   <!---- FORMULARIO ---->
-  <section>
-    <form action="turnos.php" method="post">
+  <section >
+    <form action="turnos.php" method="post" class="caja-formulario">
       <label>
         <p>Nombre y Apellido:</p>
         <input class="datos-cliete" type="text" name="nombre y apellid" placeholder="Nombre y Apellido">
